# ffmpeglearning

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  main_test.cpp
android-ffmpeg/: ffmpeg_config.h  ffmpeg_helper.cpp  ffmpeg_helper.h  ffmpeg_status.h  main.cpp
examples/: encode_video.c  http_multiclient.c  muxing.c
md_files/: INITPROJECT.md  example_encodevideo.md
